--- a/css/order.scss
+++ b/css/order.scss
@@ -56,7 +56,7 @@
         @include desktop {
             margin-top: rem(50px);
         }
-        @include smallphones {
+        @include phones {
             flex-direction: column-reverse;
             align-items: center;
         }
@@ -69,7 +69,7 @@
             color: #000;
             line-height: 30px;
             margin-right: rem(33px);
-            @include smallphones {
+            @include phones {
                 margin-right: 0;
                 margin-top: 10px;
             }
@@ -86,8 +86,6 @@
             }
             @include phones {
                 padding-top: rem(150px);
-            }
-            @include smallphones {
                 align-self: unset;
             }
 
